autoencodeur pour débruiter le spectrogramme (ne fonctionne pas -> tester avec un U-Net ou trouver une autre loss qui serait mieux adaptée que MSE)

--- a/test.ipynb
+++ b/test.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -21,7 +24,10 @@
     "# Transformation du signal en Spectrogramme"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -130,7 +136,10 @@
     "    return (X - minX)/(maxX - minX)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    }
   },
   {
@@ -139,7 +148,10 @@
     "# Chargement des paramètres"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -160,7 +172,10 @@
     "end_freq = 8000 # Hz # What frequency to stop sampling our melS from"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    }
   },
   {
@@ -169,7 +184,10 @@
     "# Chargement du dataset"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -180,7 +198,10 @@
     "train = pd.read_csv('train.csv', header=None).to_numpy()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    }
   },
   {
@@ -189,7 +210,10 @@
     "# Affichage d'un spectrogramme"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -226,7 +250,10 @@
     "plt.title('Original Spectrogram')"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    }
   }
  ],
