ajout du code pour l'inversion de spectrogramme + titre descriptifs sur les blocs de code

--- a/AE_Spectrogramme.ipynb
+++ b/AE_Spectrogramme.ipynb
@@ -26,6 +26,18 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Onde -> Spectogramme"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 67,
    "outputs": [],
@@ -142,6 +154,151 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Spectogramme -> Onde"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Also mostly modified or taken from https://gist.github.com/kastnerkyle/179d6e9a88202ab0a2fe\n",
+    "def invert_pretty_spectrogram(X_s, log=True, fft_size=512, step_size=512 / 4, n_iter=10):\n",
+    "    if log == True:\n",
+    "        X_s = np.power(10, X_s)\n",
+    "\n",
+    "    X_s = np.concatenate([X_s, X_s[:, ::-1]], axis=1)\n",
+    "    X_t = iterate_invert_spectrogram(X_s, fft_size, step_size, n_iter=n_iter)\n",
+    "    return X_t\n",
+    "\n",
+    "\n",
+    "def iterate_invert_spectrogram(X_s, fftsize, step, n_iter=10, verbose=False):\n",
+    "    \"\"\"\n",
+    "    Under MSR-LA License\n",
+    "    Based on MATLAB implementation from Spectrogram Inversion Toolbox\n",
+    "    References\n",
+    "    ----------\n",
+    "    D. Griffin and J. Lim. Signal estimation from modified\n",
+    "    short-time Fourier transform. IEEE Trans. Acoust. Speech\n",
+    "    Signal Process., 32(2):236-243, 1984.\n",
+    "    Malcolm Slaney, Daniel Naar and Richard F. Lyon. Auditory\n",
+    "    Model Inversion for Sound Separation. Proc. IEEE-ICASSP,\n",
+    "    Adelaide, 1994, II.77-80.\n",
+    "    Xinglei Zhu, G. Beauregard, L. Wyse. Real-Time Signal\n",
+    "    Estimation from Modified Short-Time Fourier Transform\n",
+    "    Magnitude Spectra. IEEE Transactions on Audio Speech and\n",
+    "    Language Processing, 08/2007.\n",
+    "    \"\"\"\n",
+    "    reg = np.max(X_s) / 1e8\n",
+    "    X_best = copy.deepcopy(X_s)\n",
+    "    for i in range(n_iter):\n",
+    "        if verbose:\n",
+    "            print(\"Runnning iter %i\" % i)\n",
+    "        if i == 0:\n",
+    "            X_t = invert_spectrogram(\n",
+    "                X_best, step, calculate_offset=True, set_zero_phase=True\n",
+    "            )\n",
+    "        else:\n",
+    "            # Calculate offset was False in the MATLAB version\n",
+    "            # but in mine it massively improves the result\n",
+    "            # Possible bug in my impl?\n",
+    "            X_t = invert_spectrogram(\n",
+    "                X_best, step, calculate_offset=True, set_zero_phase=False\n",
+    "            )\n",
+    "        est = stft(X_t, fftsize=fftsize, step=step, compute_onesided=False)\n",
+    "        phase = est / np.maximum(reg, np.abs(est))\n",
+    "        X_best = X_s * phase[: len(X_s)]\n",
+    "    X_t = invert_spectrogram(X_best, step, calculate_offset=True, set_zero_phase=False)\n",
+    "    return np.real(X_t)\n",
+    "\n",
+    "\n",
+    "def invert_spectrogram(X_s, step, calculate_offset=True, set_zero_phase=True):\n",
+    "    \"\"\"\n",
+    "    Under MSR-LA License\n",
+    "    Based on MATLAB implementation from Spectrogram Inversion Toolbox\n",
+    "    References\n",
+    "    ----------\n",
+    "    D. Griffin and J. Lim. Signal estimation from modified\n",
+    "    short-time Fourier transform. IEEE Trans. Acoust. Speech\n",
+    "    Signal Process., 32(2):236-243, 1984.\n",
+    "    Malcolm Slaney, Daniel Naar and Richard F. Lyon. Auditory\n",
+    "    Model Inversion for Sound Separation. Proc. IEEE-ICASSP,\n",
+    "    Adelaide, 1994, II.77-80.\n",
+    "    Xinglei Zhu, G. Beauregard, L. Wyse. Real-Time Signal\n",
+    "    Estimation from Modified Short-Time Fourier Transform\n",
+    "    Magnitude Spectra. IEEE Transactions on Audio Speech and\n",
+    "    Language Processing, 08/2007.\n",
+    "    \"\"\"\n",
+    "    size = int(X_s.shape[1] // 2)\n",
+    "    wave = np.zeros((X_s.shape[0] * step + size))\n",
+    "    # Getting overflow warnings with 32 bit...\n",
+    "    wave = wave.astype(\"float64\")\n",
+    "    total_windowing_sum = np.zeros((X_s.shape[0] * step + size))\n",
+    "    win = 0.54 - 0.46 * np.cos(2 * np.pi * np.arange(size) / (size - 1))\n",
+    "\n",
+    "    est_start = int(size // 2) - 1\n",
+    "    est_end = est_start + size\n",
+    "    for i in range(X_s.shape[0]):\n",
+    "        wave_start = int(step * i)\n",
+    "        wave_end = wave_start + size\n",
+    "        if set_zero_phase:\n",
+    "            spectral_slice = X_s[i].real + 0j\n",
+    "        else:\n",
+    "            # already complex\n",
+    "            spectral_slice = X_s[i]\n",
+    "\n",
+    "        # Don't need fftshift due to different impl.\n",
+    "        wave_est = np.real(np.fft.ifft(spectral_slice))[::-1]\n",
+    "        if calculate_offset and i > 0:\n",
+    "            offset_size = size - step\n",
+    "            if offset_size <= 0:\n",
+    "                print(\n",
+    "                    \"WARNING: Large step size >50\\% detected! \"\n",
+    "                    \"This code works best with high overlap - try \"\n",
+    "                    \"with 75% or greater\"\n",
+    "                )\n",
+    "                offset_size = step\n",
+    "            offset = xcorr_offset(\n",
+    "                wave[wave_start: wave_start + offset_size],\n",
+    "                wave_est[est_start: est_start + offset_size],\n",
+    "            )\n",
+    "        else:\n",
+    "            offset = 0\n",
+    "        wave[wave_start:wave_end] += (\n",
+    "                win * wave_est[est_start - offset: est_end - offset]\n",
+    "        )\n",
+    "        total_windowing_sum[wave_start:wave_end] += win\n",
+    "    wave = np.real(wave) / (total_windowing_sum + 1e-6)\n",
+    "    return wave\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Création de la classe Dataset"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 178,
    "outputs": [],
@@ -175,6 +332,18 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Configuration des paramètres du CNN"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 179,
    "outputs": [],
@@ -188,6 +357,18 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Création du dataset"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
     }
    }
   },
@@ -212,6 +393,18 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Affichage d'un spectrogramme"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
     }
    }
   },
@@ -261,6 +454,18 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Création du modèle"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 201,
    "metadata": {
@@ -301,6 +506,18 @@
     "        x = self.decoder(x)\n",
     "        return x"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Résumé du Modèle"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   },
   {
    "cell_type": "code",
@@ -356,6 +573,18 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Fonctions d'entrainement et de validation"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 203,
    "outputs": [],
@@ -401,6 +630,18 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Entrainement du CNN"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
     }
    }
   },
@@ -1293,6 +1534,18 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Vérification"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 205,
    "outputs": [
@@ -1342,18 +1595,6 @@
     "fig.colorbar(cax)\n",
     "plt.title('Original Spectrogram')\n"
    ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
