ajout du code pour l'inversion de spectrogramme + titre descriptifs sur les blocs de code

--- a/AE_Spectrogramme.ipynb
+++ b/AE_Spectrogramme.ipynb
@@ -8,6 +8,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
+    "import copy\n",
     "from scipy.signal import butter, lfilter\n",
     "import torch\n",
     "import torch.nn as nn\n",
@@ -277,7 +278,34 @@
     "        )\n",
     "        total_windowing_sum[wave_start:wave_end] += win\n",
     "    wave = np.real(wave) / (total_windowing_sum + 1e-6)\n",
-    "    return wave\n"
+    "    return wave\n",
+    "\n",
+    "def xcorr_offset(x1, x2):\n",
+    "    \"\"\"\n",
+    "    Under MSR-LA License\n",
+    "    Based on MATLAB implementation from Spectrogram Inversion Toolbox\n",
+    "    References\n",
+    "    ----------\n",
+    "    D. Griffin and J. Lim. Signal estimation from modified\n",
+    "    short-time Fourier transform. IEEE Trans. Acoust. Speech\n",
+    "    Signal Process., 32(2):236-243, 1984.\n",
+    "    Malcolm Slaney, Daniel Naar and Richard F. Lyon. Auditory\n",
+    "    Model Inversion for Sound Separation. Proc. IEEE-ICASSP,\n",
+    "    Adelaide, 1994, II.77-80.\n",
+    "    Xinglei Zhu, G. Beauregard, L. Wyse. Real-Time Signal\n",
+    "    Estimation from Modified Short-Time Fourier Transform\n",
+    "    Magnitude Spectra. IEEE Transactions on Audio Speech and\n",
+    "    Language Processing, 08/2007.\n",
+    "    \"\"\"\n",
+    "    x1 = x1 - x1.mean()\n",
+    "    x2 = x2 - x2.mean()\n",
+    "    frame_size = len(x2)\n",
+    "    half = frame_size // 2\n",
+    "    corrs = np.convolve(x1.astype(\"float32\"), x2[::-1].astype(\"float32\"))\n",
+    "    corrs[:half] = -1e30\n",
+    "    corrs[-half:] = -1e30\n",
+    "    offset = corrs.argmax() - len(x1)\n",
+    "    return offset"
    ],
    "metadata": {
     "collapsed": false,
