--- a/AE_MNIST.ipynb
+++ b/AE_MNIST.ipynb
@@ -25,6 +25,18 @@
    "outputs": [],
    "source": [
     "def add_noise(img, noise_type=\"gaussian\", mean=0, var=1):\n",
+    "    '''add_noise add additional or multiplicative noise.\n",
+    "    :param\n",
+    "    img: origanl image\n",
+    "    noise_type: gaussian additive or gamma speckle.\n",
+    "    mean: first parameters\n",
+    "    var: second parameters.\n",
+    "\n",
+    "    gaussian: (mean, var)\n",
+    "    gamma: (a, scale)\n",
+    "\n",
+    "    :return\n",
+    "    image with noise.'''\n",
     "    row, col = 28, 28\n",
     "    img = img.astype(np.float32)\n",
     "    sigma = var ** .5\n",
@@ -41,6 +53,14 @@
     "        return img\n",
     "\n",
     "def snr(img1, img2):\n",
+    "    '''Compute an estimation of SNR.\n",
+    "\n",
+    "    :param\n",
+    "    img1: target image\n",
+    "    img2: comparative image (with noise)\n",
+    "\n",
+    "    :return\n",
+    "    SNR.'''\n",
     "    sz = img1.shape\n",
     "    acc_num = 0\n",
     "    acc_den = 0\n",
@@ -53,6 +73,15 @@
     "    return acc_num / acc_den\n",
     "\n",
     "def psnr(img1, img2):\n",
+    "    '''Compute an estimation of PSNR.\n",
+    "\n",
+    "    :param\n",
+    "    img1: target image\n",
+    "    img2: comparative image (with noise)\n",
+    "\n",
+    "    :return\n",
+    "    PSNR\n",
+    "    '''\n",
     "    sz = img1.shape\n",
     "    acc_mse = 0\n",
     "\n",
@@ -111,18 +140,24 @@
     }
    ],
    "source": [
+    "#Load data\n",
     "(xtrain, ytrain), (xtest, ytest) = mnist.load_data()\n",
     "\n",
+    "\n",
+    "#Parameters of noise\n",
     "noises = [\"gaussian\", \"speckle\"]\n",
+    "#Gaussian additive\n",
     "mean = 0\n",
     "var = 10000.\n",
+    "#Gamma spekle\n",
     "lb = 1.1\n",
     "a = lb\n",
     "scale = 1 / (lb - 1)\n",
-    "noise_ct = 0\n",
-    "noise_id = 0\n",
+    "noise_ct = 0    #number of image with noise\n",
+    "noise_id = 0    #0: gaussian additive, 1: Gamma spekle\n",
     "traindata = np.zeros((60000, 28, 28))\n",
     "\n",
+    "#Add noise for train dataset\n",
     "for idx in tqdm(range(len(xtrain))):\n",
     "    traindata[idx] = add_noise(xtrain[idx], noise_type=noises[noise_id], mean=mean, var=var)\n",
     "\n",
@@ -131,6 +166,7 @@
     "\n",
     "testdata = np.zeros((10000, 28, 28))\n",
     "\n",
+    "#Add noise for test dataset\n",
     "for idx in tqdm(range(len(xtest))):\n",
     "    x = add_noise(xtest[idx], noise_type=noises[noise_id], mean=mean, var=var)\n",
     "    testdata[idx] = x\n",
@@ -184,6 +220,7 @@
     "axes[1, 2].set_title(\"Noised Image\")\n",
     "plt.show()\n",
     "\n",
+    "#Estimation of SNR et PSNR for one image\n",
     "snr_estim = snr(xtrain[0], traindata[0])\n",
     "psnr_estim = psnr(xtrain[0], traindata[0])\n",
     "\n",
@@ -202,6 +239,7 @@
     "class noisedDataset(Dataset):\n",
     "\n",
     "    def __init__(self, datasetnoised, datasetclean, labels, transform):\n",
+    "        '''Construction of train and test dataset.'''\n",
     "        self.noise = datasetnoised\n",
     "        self.clean = datasetclean\n",
     "        self.labels = labels\n",
@@ -230,13 +268,13 @@
    "execution_count": 84,
    "outputs": [],
    "source": [
+    "#Construction of dataset\n",
     "tsfms = transforms.Compose([transforms.ToTensor()])\n",
     "\n",
     "trainset = noisedDataset(traindata, xtrain, ytrain, tsfms)\n",
     "testset = noisedDataset(testdata, xtest, ytest, tsfms)\n",
     "\n",
     "batch_size = 32\n",
-    "\n",
     "trainloader = DataLoader(trainset, batch_size=32, shuffle=True)\n",
     "testloader = DataLoader(testset, batch_size=1, shuffle=True)"
    ],
@@ -251,7 +289,10 @@
    "source": [
     "class denoising_model(nn.Module):\n",
     "    def __init__(self):\n",
+    "        '''Autoencodeur for denoising.'''\n",
     "        super(denoising_model, self).__init__()\n",
+    "\n",
+    "        #Encoder\n",
     "        self.encoder = nn.Sequential(\n",
     "            nn.Linear(28 * 28, 256),\n",
     "            nn.ReLU(True),\n",
@@ -262,6 +303,7 @@
     "\n",
     "        )\n",
     "\n",
+    "        #Decoder\n",
     "        self.decoder = nn.Sequential(\n",
     "            nn.Linear(64, 128),\n",
     "            nn.ReLU(True),\n",
@@ -271,6 +313,7 @@
     "            nn.Sigmoid(),\n",
     "        )\n",
     "\n",
+    "    #Autoencoder\n",
     "    def forward(self, x):\n",
     "        x = self.encoder(x)\n",
     "        x = self.decoder(x)\n",
@@ -318,6 +361,7 @@
     }
    ],
    "source": [
+    "#Get autoencoder model\n",
     "from torchsummary import summary\n",
     "\n",
     "model = denoising_model()\n",
@@ -345,6 +389,7 @@
     }
    ],
    "source": [
+    "#CPU or GPU computation\n",
     "if torch.cuda.is_available() == True:\n",
     "    device = \"cuda:0\"\n",
     "else:\n",
@@ -352,6 +397,7 @@
     "\n",
     "print(device)\n",
     "\n",
+    "#Hyperparameters.\n",
     "model = denoising_model().to(device)\n",
     "criterion = nn.MSELoss()\n",
     "optimizer = optim.SGD(model.parameters(), lr=0.01, weight_decay=1e-5)\n",
@@ -1918,6 +1964,7 @@
    "source": [
     "%matplotlib qt\n",
     "\n",
+    "#Train the model on train dataset\n",
     "for epoch in range(epochs):\n",
     "\n",
     "    print(\"Entering Epoch: \", epoch)\n",
@@ -1974,6 +2021,7 @@
     }
    ],
    "source": [
+    "#Test the model\n",
     "f, axes = plt.subplots(6, 4, figsize=(20, 20))\n",
     "axes[0, 0].set_title(\"Original Image\")\n",
     "axes[0, 1].set_title(\"Dirty Image\")\n",
@@ -2020,6 +2068,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "#Save the model as a .h file\n",
     "PATH = \"model\"\n",
     "torch.save(model.state_dict(), PATH)  # We save the model state dict at PATH"
    ],
@@ -2044,6 +2093,7 @@
     "import imageio as iio\n",
     "import numpy as np\n",
     "\n",
+    "#Visualisation of one recontructed image from test dataset after each epoch\n",
     "frames = np.stack([iio.imread(f\"animation/2_{i}.png\")[59:425, 105:475] for i in range(50)], axis = 0)\n",
     "\n",
     "iio.mimwrite('animation_1d.gif', frames)"
@@ -2077,6 +2127,7 @@
     "import imageio as iio\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "#Visualisation of one recontructed image from test dataset after each epoch\n",
     "a = iio.imread(f\"animation/2_0.png\")[59:425, 105:475]\n",
     "\n",
     "plt.imshow(a)\n",
