--- a/AE_Sinogrammes.ipynb
+++ b/AE_Sinogrammes.ipynb
@@ -389,9 +389,9 @@
    "source": [
     "from torch import nn\n",
     "\n",
-    "class denoising_model(nn.Module):\n",
+    "class DEAsinogrammes(nn.Module):\n",
     "    def __init__(self):\n",
-    "        super(denoising_model, self).__init__()\n",
+    "        super(DEAsinogrammes, self).__init__()\n",
     "\n",
     "        # Encodeur et décodeur à base de couches Denses\n",
     "        self.encoderDense = nn.Sequential(\n",
@@ -531,7 +531,7 @@
     "print(device)\n",
     "\n",
     "# Création du modèle\n",
-    "model = denoising_model().to(device)\n",
+    "model = DEAsinogrammes().to(device)\n",
     "summary(model, (1, 32*32))\n",
     "\n",
     "# Définition de la loss et de l'optimiseur\n",
